feat: configuracion de los modelos

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnection": "server=behb5nod1g68jels5dgo-mysql.services.clever-cloud.com;port=3306;database=behb5nod1g68jels5dgo;uid=ufygnbs7ads1dtgu;password=xcB7mzsGDqM2VQWQhMlr"
+  }
 }
